kubernetes/ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  annotations:
    traefik.ingress.kubernetes.io/service.serverscheme: "http"
spec:
  ingressClassName: traefik
  rules:
    - host: tempo.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3200
          - path: /loki/api/v1/push
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
    - host: loki.ebruno.fr
      http:
        paths:
          - path: /api/v1/push
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
          - path: /loki/api/v1/push
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
  tls:
    - hosts:
      - tempo.ebruno.fr
      - loki.ebruno.fr
